--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "master-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js",
+    "dev": "NODE_ENV=dev nodemon app.js",
+    "prod": "NODE_ENV=prod nodemon app.js",
+    "start": "nodemon app.js",
     "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
   },
   "keywords": [],
@@ -13,20 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "is-empty": "^1.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.15",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.6",
-    "prettier": "^2.7.1",
-    "validator": "^13.1.17"
-  },
-  "engines": {
-    "node": "15.2.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
+    "validator": "^13.11.0"
   }
 }
